Fix some missing line endings in lua files

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -165,6 +165,8 @@
     ".prettierrc": "json",
     ".eslintrc.json": "jsonc"
   },
+  "files.insertFinalNewline": true,
+  "files.trimFinalNewlines": true,
 
   // Github Copilot
   // ---------------------------------------------------------------------------
