Configure lua formatting in vscode settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -197,6 +197,13 @@
 
   "javascript.updateImportsOnFileMove.enabled": "always",
 
+  // Lua
+  // ---------------------------------------------------------------------------
+
+  "[lua]": {
+    "editor.defaultFormatter": "sumneko.lua"
+  },
+
   // Playwright Extension
   // ---------------------------------------------------------------------------
 
