--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -130,6 +130,7 @@
   "editor.parameterHints.enabled": false,
   "editor.linkedEditing": true,
   "editor.inlineSuggest.enabled": true,
+  "editor.lightbulb.enabled": "off",
 
   // Formatting
   "editor.formatOnSave": true,
@@ -172,6 +173,7 @@
   // ---------------------------------------------------------------------------
 
   "github.copilot.editor.enableAutoCompletions": true,
+  "github.copilot.editor.enableCodeActions": false,
 
   // GitLens
   // ---------------------------------------------------------------------------
@@ -249,6 +251,7 @@
   // ---------------------------------------------------------------------------
 
   "scm.diffDecorations": "gutter",
+  "diffEditor.ignoreTrimWhitespace": false,
 
   // Search
   // ---------------------------------------------------------------------------
@@ -330,23 +333,11 @@
       "commands": ["editor.action.outdentLines"]
     },
     {
-      "before": ["<leader>", "m"],
-      "commands": ["bookmarks.toggle"]
-    },
-    {
-      "before": ["<leader>", "b"],
-      "commands": ["bookmarks.list"]
-    },
-    {
-      "before": ["<leader>", "b", "a"],
-      "commands": ["bookmarks.listFromAllFiles"]
-    },
-    {
       "before": ["<leader>", "f"],
       "commands": ["editor.toggleFold"]
     },
     {
-      "before": ["<leader>", "<leader>", "f"],
+      "before": ["<leader>", "F"],
       "commands": ["editor.foldAll"]
     },
     {
@@ -460,5 +451,5 @@
   "zenMode.centerLayout": false,
   "zenMode.fullScreen": false,
   "zenMode.hideLineNumbers": false,
-  "diffEditor.ignoreTrimWhitespace": false
+  "zenMode.showTabs": "none"
 }
