Updates to karabiner config and process for symlinking

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ fish/extra_config.fish
 # Filenames used when working on macos configuration
 before
 after
+
+# Karabiner configration ignores
+karabiner/config/automatic_backups/*
+!karabiner/config/automatic_backups/.gitkeep 
