--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -152,7 +152,7 @@
   // ESLint
   // ---------------------------------------------------------------------------
 
-  "eslint.experimental.useFlatConfig": true,
+  "eslint.useFlatConfig": true,
 
   // File Explorer
   // ---------------------------------------------------------------------------
