--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -123,3 +123,5 @@
   # https://zarino.co.uk/post/git-set-upstream/
   set-upstream = !git branch --set-upstream-to=origin/`git symbolic-ref --short HEAD`
   su = set-upstream
+[safe]
+	bareRepository = explicit
