--- a/ghostty/config
+++ b/ghostty/config
@@ -11,6 +11,7 @@ adjust-cell-height = 2
 window-padding-x = 10
 window-padding-y = 10
 resize-overlay = never
+unfocused-split-opacity = 0.4
 
 confirm-close-surface = false
 
