Add scroll keybindings to ghostty config

--- a/ghostty/config
+++ b/ghostty/config
@@ -49,6 +49,8 @@ keybind = opt+l=resize_split:right,10
 keybind = opt+space=equalize_splits
 keybind = ctrl+j=jump_to_prompt:1
 keybind = ctrl+k=jump_to_prompt:-1
+keybind = ctrl+shift+k=scroll_page_lines:-1
+keybind = ctrl+shift+j=scroll_page_lines:1
 # sends Ctrl+L (clear) instead of full reset
 keybind = cmd+k=unbind
 keybind = cmd+k=text:\x0c
