--- a/mcp/mcp-config.json
+++ b/mcp/mcp-config.json
@@ -1,12 +1,15 @@
 {
   "mcpServers" : {
-    "Context7" : {
+    "context7" : {
+      "command" : "npx",
       "args" : [
         "-y",
         "@upstash\/context7-mcp@latest"
-      ],
-      "command" : "npx",
-      "description" : "Context7 MCP pulls up-to-date, version-specific documentation and code examples straight from the source — and places them directly into your prompt."
+      ]
+    },
+    "chrome-devtools": {
+      "command": "npx",
+      "args": ["chrome-devtools-mcp@latest"]
     }
   }
 }
