Add Linear mcp to config

--- a/mcp/mcp-config.json
+++ b/mcp/mcp-config.json
@@ -10,6 +10,10 @@
     "chrome-devtools": {
       "command": "npx",
       "args": ["chrome-devtools-mcp@latest"]
+    },
+    "linear": {
+      "command": "npx",
+      "args": ["-y", "mcp-remote", "https://mcp.linear.app/mcp"]
     }
   }
 }
