MCP configuration supports VSCode now also

--- a/mcp/mcp-config.json
+++ b/mcp/mcp-config.json
@@ -19,5 +19,26 @@
       "command": "npx",
       "args": ["-y", "mcp-remote", "https://mcp.linear.app/mcp"]
     }
+  },
+  "servers": {
+    "context7" : {
+      "command" : "npx",
+      "args" : [
+        "-y",
+        "@upstash/context7-mcp@latest"
+      ]
+    },
+    "chrome-devtools": {
+      "command": "npx",
+      "args": ["chrome-devtools-mcp@latest"]
+    },
+    "figma": {
+      "type": "http",
+      "url": "https://mcp.figma.com/mcp"
+    },
+    "linear": {
+      "command": "npx",
+      "args": ["-y", "mcp-remote", "https://mcp.linear.app/mcp"]
+    }
   }
 }
