--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -499,5 +499,6 @@
   "zenMode.centerLayout": false,
   "zenMode.fullScreen": false,
   "zenMode.hideLineNumbers": false,
-  "zenMode.showTabs": "none"
+  "zenMode.showTabs": "none",
+  "gitlens.gitkraken.mcp.autoEnabled": false
 }
