Add playwright to mcp server config

--- a/mcp/mcp-config.json
+++ b/mcp/mcp-config.json
@@ -18,6 +18,10 @@
     "linear": {
       "command": "npx",
       "args": ["-y", "mcp-remote", "https://mcp.linear.app/mcp"]
+    },
+    "playwright": {
+      "command": "npx",
+      "args": ["mcp-playwright@latest"]
     }
   },
   "servers": {
@@ -39,6 +43,10 @@
     "linear": {
       "command": "npx",
       "args": ["-y", "mcp-remote", "https://mcp.linear.app/mcp"]
+    },
+    "playwright": {
+      "command": "npx",
+      "args": ["mcp-playwright@latest"]
     }
   }
 }
