Add claude desktop to leader-key config

--- a/leader-key/config.json
+++ b/leader-key/config.json
@@ -167,6 +167,13 @@
           "label" : "1Password",
           "type" : "application",
           "value" : "/Applications/1Password.app"
+        },
+        {
+          "iconPath" : "/Applications/Claude.app",
+          "key" : "c",
+          "label" : "Claude",
+          "type" : "application",
+          "value" : "/Applications/Claude.app"
         }
       ],
       "key" : "o",
