--- a/ghostty/config
+++ b/ghostty/config
@@ -54,3 +54,4 @@ keybind = ctrl+shift+j=scroll_page_lines:1
 # sends Ctrl+L (clear) instead of full reset
 keybind = cmd+k=unbind
 keybind = cmd+k=text:\x0c
+keybind = shift+enter=text:\x1b\r
