Latest vscode settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -6,7 +6,7 @@
 
   // Code Rabbit
   // ---------------------------------------------------------------------------
-  "coderabbit.autoReviewMode": "prompt",
+  "coderabbit.autoReviewMode": "disabled",
 
   // Code Spell Checker
   // ---------------------------------------------------------------------------
