More yazi configuration

--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -14,7 +14,7 @@ play = [
 
 [open]
 rules = [
-  { name = "*/", use = "enter" },  # directories handled normally
+  { name = "*/", use = "open" },  # directories handled normally
   { name = "*.svg", use = "play" },  # SVG files open with default app (browser)
   { mime = "image/*", use = "preview" },  # images open with Preview
   { mime = "video/*", use = "play" },  # videos open with default player
@@ -25,5 +25,9 @@ rules = [
   { mime = "application/gzip", use = "open" },
   { mime = "application/json", use = "edit" },  # JSON files in editor
   { mime = "text/*", use = "edit" },  # text files in editor
-  { name = "*", use = "edit" },  # everything else in editor as fallback
+  { name = "*", use = "edit" },  # everything else in editor
 ]
+
+[mgr]
+show_hidden = true
+show_symlink = true
