--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,27 +1,46 @@
-# Use C-c as the prefix key
+# Use C-Space as the prefix key
 unbind C-b
-set-option -g prefix C-c
-bind-key C-c send-prefix
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
 
-# Re-apply config with C-c r
-bind r source-file ~/.tmux.conf
+# Re-apply config with C-Space r
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
-# Bind window splitting to C-c {|,-}
-bind | split-window -h
-bind - split-window -v
+# Disable window splitting shortcuts
 unbind '"'
 unbind %
+
+# Scroll 3 lines at a time with Ctrl+j/k
+bind -n C-k copy-mode -e \; send-keys -X -N 3 scroll-up
+bind -n C-j copy-mode -e \; send-keys -X -N 3 scroll-down
+
+# Vi mode for copy mode
+set -g mode-keys vi
+bind -T copy-mode-vi C-k send-keys -X -N 3 scroll-up
+bind -T copy-mode-vi C-j send-keys -X -N 3 scroll-down
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+
+# Allow escape sequences (e.g. OSC 7) to pass through to the outer terminal.
+# Required for Ghostty's window-inherit-working-directory to work inside tmux.
+set -g allow-passthrough on
 
 # Enable mouse interaction
 set -g mouse on
 
-# Theme
-set -g status-bg black
-set -g status-fg white
-# set -g window-status-current-bg black
-# set -g window-status-current-fg white
-# set -g window-status-current-attr bold
-# set -g status-interval 60
-# set -g status-left-length 30
-# set -g status-left '#[fg=white]%H:%M #S #[default] '
-# set -g status-right ''
+# Hide the status bar
+set -g status off
+
+# Hide scroll position indicator in copy mode
+set -g copy-mode-position-format ""
+
+# Message style
+set -g message-style "fg=#fcfcfa,bg=#2d2a2e,align=centre"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'junegunn/tmux-fzf-url'
+set -g @plugin 'schasse/tmux-jump'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
