Update TMUX install and config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,6 +37,9 @@ set -g copy-mode-position-format ""
 # Message style
 set -g message-style "fg=#fcfcfa,bg=#2d2a2e,align=centre"
 
+# Selection / copy-mode styling
+set -g mode-style "fg=#fcfcfa,bg=#5b595c"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'junegunn/tmux-fzf-url'
