Add extrakto plugin to tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,6 +44,10 @@ set -g mode-style "fg=#fcfcfa,bg=#5b595c"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'junegunn/tmux-fzf-url'
 set -g @plugin 'schasse/tmux-jump'
+set -g @plugin 'laktak/extrakto'
+
+# ExtraKto settings
+set -g @extrakto_filter_order "line word all"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
